--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,11 +1,11 @@
 <ion-side-menus enable-menu-with-back-views="true">
-  <ion-side-menu-content>
+  <ion-side-menu-content drag-content="false">
   	  <ion-nav-bar class="bar-black">
 		<!--<ion-nav-buttons side="left">
 			<button  class="button button-icon icon ion-navicon" menu-toggle="left"></button>
 		</ion-nav-buttons>-->
 
-		<ion-nav-back-button></ion-nav-back-button>
+		<!--<ion-nav-back-button></ion-nav-back-button>-->
 	  </ion-nav-bar>
     <ion-nav-view name="menuContent" animation="slide-left-right"></ion-nav-view>
   </ion-side-menu-content>
