--- a/www/templates/tab-artists.html
+++ b/www/templates/tab-artists.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Browse Mattress Factory Artists">
+<ion-view <!--view-title="Browse Mattress Factory Artists" -->>
   <ion-content overflow-scroll="true"  delegate-handle="artistListRow" on-scroll="getScrollPosition()">
 	<div class="artistListContainer">
 		<div ng-repeat="artists in artistsList" style="position:relative;" ng-class="highlightLetter==artists.letter ? 'activeLetter letterBar' : 'letterBar'" id="artist_letter_{{artists.letter}}">
