--- a/www/templates/tab-onview.html
+++ b/www/templates/tab-onview.html
@@ -1,4 +1,4 @@
-<ion-view view-title="On View"> 
+<ion-view <!--view-title="On View"-->> 
 	<ion-content scroll="false">
 		<ion-slide-box does-continue="true" auto-play="true" interval="3000" show-pager="false">
 			<ion-slide ng-repeat="exhibition in exhibitions" id="exhibition_{{exhibition.occurrence_id}}">
