--- a/www/templates/detail-artist.html
+++ b/www/templates/detail-artist.html
@@ -1,10 +1,4 @@
-<!--
-  This template loads for the 'tab.friend-detail' state (app.js)
-  'friend' is a $scope variable created in the FriendsCtrl controller (controllers.js)
-  The FriendsCtrl pulls data from the Friends service (service.js)
-  The Friends service returns an array of friend data
--->
-<ion-view >
+<ion-view on-swipe-right="$ionicGoBack()">
   <ion-content>
 
 	<div id="deviceready" class="viewArea">
@@ -14,33 +8,35 @@
 		</div>
 		<div class='contentMain'>
 			<div class='upperImages'>
-				<ion-scroll direction="x" class="artistScroller"><div ng-bind-html="artist.pics">
+				<ion-scroll direction="x" class="imageScroller"><div ng-bind-html="artist.pics">
 				</div></ion-scroll>
             </div>
 
 			<div class='artistLowerInfo'>
-				<ion-scroll direction="y" class='col1' ng-if='artist.biography'>
-					<h5>Biography</h5>
-					<div ng-bind-html="artist.biography"></div>				
-				</ion-scroll>
-				<ion-scroll direction="y" class='related col2'>
-					<div class='unit'>
-						<h5>Audio</h5>
-						<div style='margin-right:10px;'><iframe width="100%" height="70" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/268334580&amp;color=ff5500&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false"></iframe></div>
-					</div>
-					<div class='unit' ng-if='artist.artworks'>
-						<h5>Artworks</h5>
-						<div ng-bind-html="artist.artworks"></div> 
-					</div>
-					<div class='unit' ng-if='artist.exhibitions'>
-						<h5>Exhibitions</h5>
-						<div ng-bind-html='artist.exhibitions'></div> 
-					</div>
-					<div class='unit' ng-if='artist.events'>
-						<h5>Events</h5>
-						<div ng-bind-html='artist.events'></div> 
-					</div>	
-				</ion-scroll>
+				<div class="row responsive-md">					
+					<ion-scroll direction="y" class='col col-67 detailScrollTall' ng-if='artist.biography'>
+						<h5>Biography</h5>
+						<div ng-bind-html="artist.biography"></div>				
+					</ion-scroll>
+					<ion-scroll direction="y" class='col col-33 related detailScrollTall'>
+						<div class='unit'>
+							<h5>Audio</h5>
+							<div style='margin-right:10px;'><iframe width="100%" height="70" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/268334580&amp;color=ff5500&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false"></iframe></div>
+						</div>
+						<div class='unit' ng-if='artist.artworks'>
+							<h5>Artworks</h5>
+							<div ng-bind-html="artist.artworks"></div> 
+						</div>
+						<div class='unit' ng-if='artist.exhibitions'>
+							<h5>Exhibitions</h5>
+							<div ng-bind-html='artist.exhibitions'></div> 
+						</div>
+						<div class='unit' ng-if='artist.events'>
+							<h5>Events</h5>
+							<div ng-bind-html='artist.events'></div> 
+						</div>	
+					</ion-scroll>
+				</div>
 			</div>				
 		</div>
 	</div>	
