--- a/www/templates/detail-museum.html
+++ b/www/templates/detail-museum.html
@@ -1,17 +1,15 @@
-<ion-view >
+<ion-view on-swipe-right="$ionicGoBack()">
   <ion-content>
-
-		<!--{{floor.floor_plan_coor}}-->
+		<div class="floorTitle">{{floor.parent}}<br/><span class='floorSubTitle'>{{floor.name}}</span></div>
 		<div class="row">
-			<ion-scroll class="col col-50">
-				<div class="floorTitle">{{floor.parent}}: {{floor.name}}</div>
+			<ion-scroll class="col col-50 col-center">
 				<div id="floorPlan">
 					<span ng-bind-html="trustAsHtml(floor.floor_plan + coordinates)" class="fpOrientation{{getOrientation(floor.floor_plan)}}"></span>
 				</div>
 			</ion-scroll>
 			<ion-scroll class="col col-50 floorExhibitionList" delegate-handle="floorExhibitionList" on-scroll="getScrollPosition()">
 				<ion-list>
-					<ion-item class='floorExhibitionListItem' ng-class='{"active":highlightExhibition=={{exhibition.occurrence_id}}}' ng-repeat="exhibition in exhibitions" type="item-text-wrap" id="exhibition_{{exhibition.occurrence_id}}" ng-click="highlightCoor({{exhibition.occurrence_id}}); highlightExhibitionTitle({{exhibition.occurrence_id}});">
+					<ion-item class='floorExhibitionListItem item-text-wrap' ng-class='{"active":highlightExhibition=={{exhibition.occurrence_id}}}' ng-repeat="exhibition in exhibitions" type="item-text-wrap" id="exhibition_{{exhibition.occurrence_id}}" ng-click="highlightCoor({{exhibition.occurrence_id}}); highlightExhibitionTitle({{exhibition.occurrence_id}});">
 						<h2>
 							<div class="exhibitImage" ng-if='exhibition.thumb' ng-bind-html='exhibition.thumb'></div>
 							<div class='exhibitName'>{{exhibition.name}}</div>
