--- a/www/templates/tab-exhibitions.html
+++ b/www/templates/tab-exhibitions.html
@@ -1,8 +1,8 @@
-<ion-view view-title="Browse Mattress Factory Exhibitions"> 
+<ion-view <!--view-title="Browse Mattress Factory Exhibitions"-->> 
   <ion-content>
+  	<div class="exhibitionDecade">{{decadeTitle}}</div>
   	<div class="row" on-swipe-right="loadPreviousDecade()" on-swipe-left="loadNextDecade()">
-  		<ion-scroll class="col col-50">
-			<div class="exhibitionDecade">{{decadeTitle}}</div>
+  		<ion-scroll class="col col-50 col-center">
 			<ion-list class='exhibitionListInfo'>
 				  <ion-item ng-show="showExhibition == {{exhibition.occurrence_id}}" ng-repeat="exhibition in exhibitions" type="item-text-wrap" href="#/tab/detail-exhibition/{{exhibition.occurrence_id}}">
 					<div ng-if='exhibition.thumb' ng-bind-html='exhibition.thumb'></div>
