--- a/www/templates/tab-search.html
+++ b/www/templates/tab-search.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Search the Archive"> 
-  <ion-content>
+  <ion-content has-bouncing="false" overflow-scroll="false">
   	<div class="row">
   		<ion-scroll class="col col-50">
 			<div class="resultHeading">
