--- a/www/css/style.css
+++ b/www/css/style.css
@@ -60,7 +60,7 @@ a{
 /* Landscape layout (default) */
 .viewArea {
     /* background:url(../img/MF_logo.jpg) no-repeat 10px 710px; 170px x 200px */
-    background-size:70px 70px;                               /* offset horizontal: half of text area width */
+   /* background-size:70px 70px; */                              /* offset horizontal: half of text area width */
 	background-color:#000;
 	width:100%;
     
@@ -225,6 +225,15 @@ p {
 }
 .menuBuildings a.activeBuilding{
 	opacity:1;
+}
+.footerIconBar{
+    width:100%;
+    text-align:right;
+}
+.footerIconBar i{
+    margin-left:10px;
+    right:5px;
+    font-size:35px;
 }
 /* Menu Panel */
 .menu {
@@ -843,7 +852,7 @@ p.red {
 /* Exhibition List */
 
 .exhibitionList{
-    height:620px;
+    height:calc(100vh - 94px); /* 50 bar-footer height + 44 .bar (header) */
 }
 .exhibitionList div.list{
 	padding-bottom:300px !important;
@@ -922,30 +931,29 @@ p.red {
 /*@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {*/
 @media only screen and (orientation : portrait) {
 	.exhibitionList{
-		/*height:900px;*/
+		/*height:900px; don't need this cause vh appears to be working in build :-) */
 	}
 }
 
 /* exhibition detail */
-#floorPlanExhibitionDetail{
+.floorPlanExhibitionDetail{
 	text-align:center;
 	color:#fff;
-	margin-top:10px;
 }
-#floorPlanExhibitionDetail span{
+.floorPlanExhibitionDetail span{
 	display:inline-block;
 	position:relative;
 }
-#floorPlanExhibitionDetail span.fpOrientationHorizontal{
+.floorPlanExhibitionDetail span.fpOrientationHorizontal{
 	width:90%;
 }
-#floorPlanExhibitionDetail span.fpOrientationVertical{
+.floorPlanExhibitionDetail span.fpOrientationVertical{
 	width:60%;
 }
-#floorPlanExhibitionDetail span.fpOrientationSkinnyVertical{
+.floorPlanExhibitionDetail span.fpOrientationSkinnyVertical{
 	width:40%;
 }
-#floorPlanExhibitionDetail span .floorArea{
+.floorPlanExhibitionDetail span .floorArea{
 	background-color:rgba(255,0,0,.7);
 	position:absolute;
 	z-index:10;
@@ -960,9 +968,9 @@ p.red {
 	width:40px;
 	height:40px;*/
 }
-#floorPlanExhibitionDetail span img{
-	height:auto;
-	width:100%;
+.floorPlanExhibitionDetail span img{
+	height:300px;
+	width:auto;
 	position:relative;
 	-webkit-filter: invert(1);
    filter: invert(1);
@@ -1117,36 +1125,40 @@ p.red {
 	width:auto;
 }
 .detailScroll{
-	max-height:200px;
-	padding-right:10px;
-	padding-left:10px;
+    height:calc(100vh - 494px); /* 290 upperImages height + 110 exHeader + 50 bar-footer height + 44 .bar (header) )*/
+    padding-right:10px;
+    padding-left:10px;
 }
-.detailScrollTall{
-	max-height:280px;
+.detailScrollTall{ /* artist and artwork pages where title is on top of images */
+	height:calc(100vh - 470px); /* 290 (upperImages height + 60 headerMain + 50 bar-footer height + 44 .bar (header) )*/
 	padding-right:10px;
 	padding-left:10px;
 }
 /* iPads (portrait) ----------- */
 @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {
-	.detailScroll{
+	/*
+    .detailScroll{
 		max-height:450px;
 	}
 	.detailScrollTall{
 		max-height:520px;
 	}
+     */
 }
 /* phone (portrait) ----------- */
 @media only screen and (max-device-width : 767px) and (orientation : portrait) {
-	.detailScroll{
+	/*
+    .detailScroll{
 		max-height:225px
 	}
 	.detailScrollTall{
 		max-height:260px;
 	}
+     */
 }
 /* phone (landscape) ----------- */
 @media only screen and (max-device-width : 767px) and (orientation : landscape) {
-	.detailScroll{
+	/*.detailScroll{
 		height:225px;
 	}
 	.detailScrollTall{
@@ -1158,6 +1170,7 @@ p.red {
 	.contentMain .upperImages div{
 		height:150px;
 	}
+     */
 }
 .col1{
 	float:left;
@@ -1185,20 +1198,24 @@ p.red {
 }
 /* Exhibition Detail */
 .exHeader{
-	padding-top:30px;
-	padding-bottom:20px;
-	padding-left:10px;
-	line-height:30px;	
+	padding-top:20px;
+    padding-bottom:20px;
+	padding-left:5 px;
+    line-height:30px;
+    margin-left:0px;
 }
 .exTitle {
-	font-size: 30px;
-	margin: 0px;
-	padding: 0px;
+    font-size: 30px;
+    margin: 0px;
+    padding:0px;
 	font-family: "ProximaNova";
-	text-transform: none;
+    text-transform: none;
 }
 .exTitle small {
-	font-size: 18px;
+    font-size: 18px;
+}
+.lowerInfo{
+    padding-left:10px;
 }
 /* Artist Detail */
 .artistLowerInfo{
