--- a/www/templates/tab-exhibitions.html
+++ b/www/templates/tab-exhibitions.html
@@ -1,5 +1,5 @@
 <ion-view <!--view-title="Browse Mattress Factory Exhibitions"-->> 
-  <ion-content>
+  <ion-content has-bouncing="false" overflow-scroll="false">
   	<div class="exhibitionDecade">{{decadeTitle}}</div>
   	<div class="row" on-swipe-right="loadPreviousDecade()" on-swipe-left="loadNextDecade()">
   		<ion-scroll class="col col-50 col-center">
