--- a/www/templates/tab-front.html
+++ b/www/templates/tab-front.html
@@ -1,5 +1,5 @@
 <ion-view view-title="">
-  <ion-content>
+  <ion-content has-bouncing="false" overflow-scroll="false">
   	 <div id="deviceready" class="viewArea">
 		<div id="content">
 			<h1>Mattress Factory</h1>
