--- a/www/templates/tab-museum.html
+++ b/www/templates/tab-museum.html
@@ -1,5 +1,5 @@
 <ion-view <!--view-title="Explore the Museum"-->>
-  <ion-content>
+  <ion-content has-bouncing="false" overflow-scroll="false">
 	<ion-scroll direction="y" class='buildingContainer'>
 		<div class="row responsive-lg buildings">
 			<div ng-repeat="building in buildings" class="col building" ng-class="(highlightBuilding==building.place_id ? ' activeBuilding' : '') + ($index==0 ? ' col-50' : ' col-25')" id="museum_building_{{building.place_id}}" ng-click="highlightTheBuilding({{building.place_id}});">
