--- a/www/templates/detail-artwork.html
+++ b/www/templates/detail-artwork.html
@@ -14,16 +14,8 @@
 				</ion-scroll>
 			</div>
 			<div class='artistLowerInfo'>
-				<div class="row responsive-md">							
-					<ion-scroll direction="y" class='col col-67 detailScrollTall' ng-if='artwork.statement || artwork.abstract' has-bouncing="false" overflow-scroll="false">
-						<div ng-bind-html="artwork.abstract"></div>
-						<p ng-if='exhibition.statement'>
-							<br/><H5>Artist Statement</H5>
-							<div ng-bind-html="artwork.statement"></div>	
-						</p>
-                        <br/><br/><br/><br/>
-					</ion-scroll>				
-					<ion-scroll class='col col-33 related detailScrollTall' has-bouncing="false" overflow-scroll="false">
+				<div class="row">
+					<ion-scroll direction="y" class='col detailScrollTall' has-bouncing="false" overflow-scroll="false">
 						<div class='unit' ng-if='artwork.artist'>
 							<h5>Artist</h5>
 							<div ng-bind-html="artwork.artist"></div> 
@@ -40,6 +32,11 @@
 							<h5>Events</h5>
 							<div ng-bind-html='artwork.events'></div> 
 						</div>
+                        <div ng-bind-html="artwork.abstract"></div>
+						<p ng-if='exhibition.statement'>
+							<br/><H5>Artist Statement</H5>
+							<div ng-bind-html="artwork.statement"></div>	
+						</p>
                         <br/><br/><br/><br/>
 					</ion-scroll>
 				</div>
