--- a/www/css/style.css
+++ b/www/css/style.css
@@ -59,13 +59,8 @@ a{
 }
 /* Landscape layout (default) */
 .viewArea {
-    /* background:url(../img/MF_logo.jpg) no-repeat 10px 710px; 170px x 200px */
-   /* background-size:70px 70px; */                              /* offset horizontal: half of text area width */
-	background-color:#000;
+   background-color:#000;
 	width:100%;
-    
-   /* padding-top:30px;
-    padding-left:10px;*/
 }
 .ui-overlay-a, .ui-page-theme-a, .ui-page-theme-a .ui-panel-wrapper {
 	background-color:#000 !important;
@@ -257,7 +252,26 @@ p {
 }
 .item .item-content.activated{
 	background-color:#000 !important;
-} 
+}
+/*  front page */
+.frontText{
+    padding-left:5px;
+}
+.frontText H1{
+    line-height:.9em;
+    margin-bottom:70px;
+}
+.frontText H2{
+    padding-left:10px;
+}
+@media (max-device-width : 786px) and (orientation : portrait) {
+	.frontText H1{
+        font-size:135px;
+    }
+    .frontText H2{
+        font-size:36px;
+    }
+}
 /* Artist list*/
 .artistListContainer{
 	padding-top:180px;
@@ -351,10 +365,9 @@ p {
 }
 /* Museum list*/
 .buildingContainer{
-	height:410px;
+	height:calc(100vh - 300px);
 	border-bottom:2px solid #FFF;
 	margin-bottom:10px;
-	margin-top:30px;
 }
 .building{
 	text-align:center;
@@ -409,10 +422,10 @@ p {
 /* iPads (portrait) ----------- */
 /*@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {*/
 @media only screen and (orientation : portrait) {
-	.buildingContainer{
+	/*.buildingContainer{
 		height:700px;
 		margin-top:0px;
-	}
+	}*/
 	.building{
 		height:auto;
 		margin-bottom:20px;
@@ -939,6 +952,7 @@ p.red {
 .floorPlanExhibitionDetail{
 	text-align:center;
 	color:#fff;
+    margin-bottom:10px;
 }
 .floorPlanExhibitionDetail span{
 	display:inline-block;
@@ -979,7 +993,7 @@ p.red {
 /* Search Results */
 
 .resultList{
-	height:620px;
+	height:100vh;
 }
 .resultList div.list{
 	padding-bottom:300px !important;
@@ -1050,7 +1064,7 @@ p.red {
 }
 .resultHeading input{
 	display:inline;
-	width:75%;
+	width:70%;
 	background-color:rgba(255,255,255,.1);
 	color:#FFF;
 	font-family: proximanova;
