--- a/www/templates/detail-museum.html
+++ b/www/templates/detail-museum.html
@@ -2,12 +2,12 @@
   <ion-content>
 		<div class="floorTitle">{{floor.parent}}<br/><span class='floorSubTitle'>{{floor.name}}</span></div>
 		<div class="row">
-			<ion-scroll class="col col-50 col-center">
+			<ion-scroll class="col col-50 col-center" has-bouncing="false" overflow-scroll="false">
 				<div id="floorPlan">
 					<span ng-bind-html="trustAsHtml(floor.floor_plan + coordinates)" class="fpOrientation{{getOrientation(floor.floor_plan)}}"></span>
 				</div>
 			</ion-scroll>
-			<ion-scroll class="col col-50 floorExhibitionList" delegate-handle="floorExhibitionList" on-scroll="getScrollPosition()">
+			<ion-scroll class="col col-50 floorExhibitionList" delegate-handle="floorExhibitionList" on-scroll="getScrollPosition()" has-bouncing="false" overflow-scroll="false">
 				<ion-list>
 					<ion-item class='floorExhibitionListItem item-text-wrap' ng-class='{"active":highlightExhibition=={{exhibition.occurrence_id}}}' ng-repeat="exhibition in exhibitions" type="item-text-wrap" id="exhibition_{{exhibition.occurrence_id}}" ng-click="highlightCoor({{exhibition.occurrence_id}}); highlightExhibitionTitle({{exhibition.occurrence_id}});">
 						<h2>
