--- a/www/templates/tab-onview.html
+++ b/www/templates/tab-onview.html
@@ -1,6 +1,6 @@
 <ion-view <!--view-title="On View"-->> 
 	<ion-content scroll="false" has-bouncing="false" overflow-scroll="false">
-		<ion-slide-box does-continue="true" auto-play="true" interval="3000" show-pager="false">
+		<ion-slide-box does-continue="true" auto-play="true" interval="3000" show-pager="false" ng-if="exhibitions">
 			<ion-slide ng-repeat="exhibition in exhibitions" id="exhibition_{{exhibition.occurrence_id}}">
 					<a href="#/tab/detail-exhibition/{{exhibition.occurrence_id}}"><div class="onViewSlide">
 						<div ng-if='exhibition.large' ng-bind-html='exhibition.large'></div>
