--- a/www/templates/detail-artwork.html
+++ b/www/templates/detail-artwork.html
@@ -33,8 +33,8 @@
 							<div ng-bind-html='artwork.events'></div> 
 						</div>
                         <div ng-bind-html="artwork.abstract"></div>
-						<p ng-if='exhibition.statement'>
-							<br/><H5>Artist Statement</H5>
+						<p ng-if='artwork.statement'>
+							<br/><H5 ng-if='artwork.statement'>Artist Statement</H5>
 							<div ng-bind-html="artwork.statement"></div>	
 						</p>
                         <br/><br/><br/><br/>
