--- a/www/templates/tab-front.html
+++ b/www/templates/tab-front.html
@@ -1,9 +1,11 @@
 <ion-view view-title="">
   <ion-content has-bouncing="false" overflow-scroll="false">
   	 <div id="deviceready" class="viewArea">
-		<div id="content" class="frontText">
-			<h1>Mattress Factory</h1>
-			<h2>Art You Can Get Into</h2>
+		<div id="content">
+            <div class="frontText">
+                <h1>Mattress Factory</h1>
+                <h2>Art You Can Get Into</h2>
+            </div>
 		</div>
 	</div>
   </ion-content>
