--- a/www/templates/tab-search.html
+++ b/www/templates/tab-search.html
@@ -1,7 +1,7 @@
 <ion-view> 
   <ion-content has-bouncing="false" overflow-scroll="false">
   	<div class="row">
-  		<ion-scroll class="col col-50" has-bouncing="false" overflow-scroll="false">
+  		<ion-scroll class="col col-50" has-bouncing="false" overflow-scroll="false" class="resultLeft">
 			<div class="resultHeading">
 				<form name="searchForm" id="searchForm" novalidate="" ng-submit="search(searchForm)">
 					Search the Mattress Factory Archive<br/><input class="search-bar" type="text" name="searchterm" ng-model="search.searchterm" placeholder="enter search terms"><button type="submit"><i class='fa fa-search'></i></button>
