--- a/www/css/style.css
+++ b/www/css/style.css
@@ -224,6 +224,7 @@ p {
 .footerIconBar{
     width:100%;
     text-align:right;
+    padding-right:20px;
 }
 .footerIconBar i{
     margin-left:10px;
@@ -264,8 +265,9 @@ p {
 .frontText H2{
     padding-left:10px;
 }
-@media (max-device-width : 786px) and (orientation : portrait) {
+@media (max-device-width : 786px) {
 	.frontText H1{
+        margin-top:0px;
         font-size:135px;
     }
     .frontText H2{
@@ -435,6 +437,11 @@ p {
 		height:auto;
 		margin-bottom:20px;
 	}
+    .building img{
+        height:400px;
+        margin-top:calc((100vh - 740px) / 2);
+    }
+
 }
 /* Museum list*/
 /*.museumListContainer{
@@ -825,26 +832,6 @@ p.red {
 .artistBio {
 	height:500px;
 }
-
-/*.contentMain .right {
-	width:35%;
-	color:#fff;
-	font-size:16px;
-	font-family:proximanova;
-	text-transform:none;
-	line-height:1.4em;
-}
-.contentMain .left {
-	width:60%;
-	color:#fff;
-	font-size:16px;
-	font-family:proximanova;
-	text-transform:none;
-	line-height:1.4em;
-	height:270px;
-	overflow-y:scroll;
-}
-*/
 .pointer {
 	color:#fff;
 	font-size:30px;
@@ -948,10 +935,14 @@ p.red {
 }
 /* iPads (portrait) ----------- */
 /*@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {*/
-@media only screen and (orientation : portrait) {
-	.exhibitionList{
-		/*height:900px; don't need this cause vh appears to be working in build :-) */
-	}
+@media only screen and (max-device-width : 767px) and (orientation : landscape) {
+	.exhibitionListInfo{
+        text-align:center;
+    }
+    .exhibitionListInfo img{
+        max-width:70%;
+        margin-top:20px;
+    }
 }
 
 /* exhibition detail */
@@ -997,7 +988,9 @@ p.red {
 }
 
 /* Search Results */
-
+.resultLeft{
+    height:100vh;
+}
 .resultList{
 	height:100vh;
 }
@@ -1084,8 +1077,15 @@ p.red {
 	font-size:30px;
 }
 
-
-
+@media only screen and (max-device-width : 767px) and (orientation : portrait) {
+   .resultHeading{
+        font-size: 30px;
+    }
+    .resultHeading input{
+        width:60%;
+    }
+ 
+}
 
 
 
@@ -1183,14 +1183,21 @@ p.red {
 	}
 	.detailScrollTall{
 		height:220px;
-	}
+	}*/
 	.contentMain .upperImages {
-		height:150px;
+		height:200px;
 	}	
 	.contentMain .upperImages div{
-		height:150px;
+		height:200px;
 	}
-     */
+    .detailScroll{
+        height:calc(100vh - 404px); /* 200 upperImages height + 110 exHeader + 50 bar-footer height + 44 .bar (header) )*/
+        padding-right:10px;
+        padding-left:10px;
+    }
+    .detailScrollTall{ /* artist and artwork pages where title is on top of images */
+        height:calc(100vh - 380px); /* 200 (upperImages height + 60 headerMain + 50 bar-footer height + 44 .bar (header) )*/
+    }
 }
 .col1{
 	float:left;
